# pke

./: .editorconfig  .git-worktree-config  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: ci.md  context.md  endpoint.md  migrate.md  security.md
.github/: release-please-config.json
.github/workflows/: ci.yml  release.yml
context/: 00_project_summary.md  01_problem_statement.md  02_product_principles.md  03_system_architecture.md  04_protocol_overview.md  05_data_model_public.md  06_threat_model.md  07_privacy_and_abuse.md  08_security_assumptions.md  09_mvp_scope.md  10_roadmap.md  11_demo_scenarios.md  12_glossary.md  13_publication_checklist.md  14_security_reporting.md  15_implementation_notes_public.md  16_canonical_encoding.md  MANIFEST.json  README.md
context/assets/: architecture_public.mmd  custody_flow_public.mmd
context/examples/: freeze.example.json  key_grant.canonical-bytes  key_grant.example.json  ledger_entry.canonical-bytes  ledger_entry.example.json  report.example.json  snapshot_commitment.canonical-bytes  snapshot_commitment.example.json  verification_report.canonical-bytes  verification_report.example.json  witness_attestation.canonical-bytes  witness_attestation.example.json
scripts/: generate_test_vectors.py
src/backend/: .env.sample  alembic.ini  pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: 0001_create_ledger_entries.py  0002_create_snapshots.py  0003_create_attestations.py  0004_create_reports_freezes.py  0005_create_key_grants.py  0006_create_users_and_sessions.py
src/backend/src/pke_backend/: config.py  db.py  main.py
src/backend/src/pke_backend/api/: __init__.py  attestations.py  auth.py  errors.py  freezes.py  key_grants.py  reports.py  snapshots.py
src/backend/src/pke_backend/crypto/: __init__.py  canonicalize.py  encoding.py  errors.py  hashing.py  kdf.py  signatures.py  types.py
src/backend/src/pke_backend/crypto/primitives/: __init__.py  aead.py  keywrap.py  sign.py
src/backend/src/pke_backend/models/: __init__.py  attestation.py  freeze.py  key_grant.py  ledger.py  report.py  session.py  snapshot.py  user.py
src/backend/src/pke_backend/protocol/: __init__.py  attestation.py  freeze.py  grant.py  ledger.py  report.py  report_action.py  snapshot.py  types.py
src/backend/src/pke_backend/schemas/: __init__.py  attestation.py  auth.py  freezes.py  key_grant.py  reports.py  snapshot.py
src/backend/src/pke_backend/security/: dependencies.py  errors.py
src/backend/src/pke_backend/services/: __init__.py  attestations.py  auth.py  blob_storage.py  freezes.py  key_grants.py  ledger.py  reports.py  sessions.py  signing.py  snapshots.py
src/backend/tests/: conftest.py  test_config.py  test_cors.py  test_crypto_primitives_boundary.py  test_db_session.py  test_health.py  test_lifespan.py
src/backend/tests/api/: conftest.py  test_attestations_get.py  test_attestations_post.py  test_auth_routes.py  test_custody_auth_required.py  test_errors.py  test_freezes.py  test_freezes_post.py  test_key_grants_get.py  test_key_grants_post.py  test_report_freeze_e2e.py  test_reports.py  test_reports_freezes_get.py  test_reports_post.py  test_snapshot_blob_post.py  test_snapshots_get.py  test_snapshots_post.py
src/backend/tests/crypto/: conftest.py  test_aead.py  test_aead_primitive.py  test_canonicalize.py  test_encoding.py  test_errors.py  test_hash_chain.py  test_hashing.py  test_kdf.py  test_keywrap.py  test_keywrap_primitive.py  test_package_structure.py  test_sign_primitive.py  test_signatures.py  test_stubs.py  test_swift_generated.py  test_types.py
src/backend/tests/e2e/: test_auth_flow.py
src/backend/tests/migrations/: test_0002_create_snapshots.py  test_0004_create_reports_freezes.py  test_0006_create_users_and_sessions.py  test_attestation_migration.py  test_initial_migration.py  test_key_grants_migration.py
src/backend/tests/models/: test_attestation.py  test_freeze.py  test_key_grant.py  test_ledger.py  test_report.py  test_snapshot.py
src/backend/tests/protocol/: test_canonical_bytes_parity.py  test_freeze_action_model.py  test_freeze_version.py  test_models.py  test_report_action.py  test_report_action_model.py  test_report_freeze_schemas.py  test_schema_parity.py  test_types.py
src/backend/tests/schemas/: test_attestation.py  test_field_parity.py  test_key_grant.py  test_snapshot_in.py  test_snapshot_out.py
src/backend/tests/security/: test_require_user.py
src/backend/tests/services/: conftest.py  test_auth_hashing.py  test_blob_storage.py  test_freezes.py  test_ledger.py  test_signing.py  test_snapshots.py
src/ios/: .swiftlint.yml  Package.resolved  Package.swift
src/ios/PKE/: Info.plist
src/ios/PKE.xcodeproj/: project.pbxproj
src/ios/PKE/App/: AppNavigationState.swift  AppRoute.swift  PKEApp.swift  Role.swift
src/ios/PKE/Views/: BundleInfo.swift  CancellationBanner.swift  ContentView.swift  Fingerprint.swift  Limitations.swift  LimitationsView.swift  PasteboardWriting.swift  RoleSelectionView.swift  SettingsView.swift  SettingsViewModel.swift
src/ios/PKEAppHost/: PKEAppHost.swift
src/ios/PKEAppTests/: InfoPlistTests.swift  PlaceholderTests.swift
src/ios/PKETests/App/: AppNavigationStateTests.swift  AppRouteTests.swift  BundleInfoTests.swift  FingerprintTests.swift  IsolatedDefaults.swift  LimitationsDocParityTests.swift  PasteboardWritingTests.swift  RecordingPasteboardWriter.swift  RoleTests.swift  SettingsViewModelTests.swift
src/ios/PKETests/Crypto/: AEADTests.swift  Base64URLTests.swift  BundleResourceURLs.swift  CanonicalJSONTests.swift  HashChainTests.swift  HashingTests.swift  JSONValueTests.swift  KDFTests.swift  KeyTypesTests.swift  (+5 more)
src/shared/schemas/: freeze.json  key_grant.json  ledger_entry.json  report.json  snapshot_commitment.json  verification_report.json  witness_attestation.json
src/shared/test_vectors/: README.md
src/shared/tools/: __init__.py  generate_vectors.py
(+130 files in other folders)
