[project]
name = "pke"
version = "0.1.0"
description = "Verifiable chain of custody for encrypted mobile evidence"
requires-python = ">=3.12"
license = "MIT"

[tool.uv.workspace]
members = ["src/backend"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src/backend/src"]

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    # --- Formatter conflicts ---
    "COM812", "COM819",
    "D206", "D300",
    "E111", "E114", "E117",
    "W191",
    "Q000", "Q001", "Q002", "Q003",

    # --- Docstring rules ---
    "D100", "D101", "D102", "D103", "D104", "D105", "D107",
    "D203", "D205", "D213", "D301", "D400", "D401", "D415", "D417",

    # --- Line length (formatter handles) ---
    "E501",

    # --- Type annotations (gradual typing) ---
    "ANN001", "ANN002", "ANN003",
    "ANN201", "ANN202", "ANN204", "ANN206", "ANN401",

    # --- Boolean arguments ---
    "FBT001", "FBT002", "FBT003",

    # --- Exception message style ---
    "EM101", "EM102",

    # --- Try/except style ---
    "TRY003", "TRY004", "TRY201", "TRY300", "TRY301", "TRY400",

    # --- TODOs ---
    "FIX001", "FIX002",
    "TD001", "TD002", "TD003",

    # --- Pydantic/runtime types ---
    "UP007",

    # --- Naming conventions ---
    "N801", "N802", "N803", "N806", "N815", "N818",

    # --- Complexity metrics ---
    "C901", "PLR0911", "PLR0912", "PLR0915",

    # --- Imports ---
    "PLC0415",
    "TC001", "TC002", "TC003",

    # --- Unittest compat ---
    "PT009", "PT027",

    # --- Practical relaxations ---
    "PLR0913",
    "SLF001",
    "INP001",
    "B007",
    "F841",
    "S108",
    "C401",

    # --- Sorting ---
    "RUF022",

    # --- Unicode ---
    "RUF001", "RUF002", "RUF003",

    # --- Pathlib migration ---
    "PTH100", "PTH103", "PTH108", "PTH110", "PTH112", "PTH113", "PTH114",
    "PTH118", "PTH119", "PTH122", "PTH123", "PTH204", "PTH208",

    # --- Assertions & defensive programming ---
    "S101", "S110", "S314", "S603", "S106",

    # --- Unused arguments ---
    "ARG001", "ARG002", "ARG003", "ARG005",

    # --- Code style choices ---
    "RET503", "RET504",
    "PLR2004", "PLW2901", "PLW1641", "PLW1510", "PLW0603", "PLW1508", "PLW3301", "PLR1714",
    "PGH003",
    "T201",
    "E741",
    "ERA001",

    # --- Builtin shadowing ---
    "A001", "A002",

    # --- Blind exception handling ---
    "BLE001", "B904", "B905", "B017", "B018",

    # --- Upgrade suggestions ---
    "UP031", "UP040", "UP042", "UP046", "UP047",

    # --- Performance suggestions ---
    "PERF102", "PERF401",

    # --- Simplification suggestions ---
    "SIM102", "SIM103", "SIM108", "SIM117",

    # --- Pandas style ---
    "PD002", "PD003", "PD004", "PD011",

    # --- Miscellaneous ---
    "RUF005", "RUF012", "RUF015", "RUF043", "RUF059",
    "DTZ005", "DTZ006",
    "EXE001",
    "FURB132", "FURB171",
    "LOG015",
    "PYI034",

    # --- Pytest style ---
    "PT011", "PT012", "PT017", "PT018", "PT019",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["src/backend/tests"]
asyncio_mode = "auto"
strict_markers = true
filterwarnings = ["error"]
