[project]
name = "pke-backend"
version = "0.1.0"
description = "PKE backend API — custody ledger, blob storage, registries"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "alembic>=1.14",
    "asyncpg>=0.30",
    "cryptography>=43.0.0",
    "fastapi>=0.115",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.18",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "mypy>=1.14",
    "ruff>=0.8",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pke_backend"]
